feat: leave team endpoint
