# apps/api/docs/swagger.yaml
@@ -1601,6 +1601,47 @@ paths:
       summary: Get a team and its members by team id.
       tags:
       - Team
+  /teams/{teamId}/members/me:
+    delete:
+      description: Leaves a team if the requester is on the team. Depends on cookies
+        for user retrieval.
+      parameters:
+      - description: The authenticated session token/id
+        in: cookie
+        name: sh_session_id
+        required: true
+        schema:
+          type: string
+      - description: The ID of the team
+        in: path
+        name: team_id
+        required: true
+        schema:
+          type: string
+      responses:
+        "204":
+          description: Successfully left the team
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Bad Request: Missing or malformed parameters.'
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Unauthenticated: Requester is not currently authenticated.'
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: Something went seriously wrong.
+      summary: Leave a team
+      tags:
+      - Team
   /users:
     get:
       description: Get or search for users by name or email. If no search term is
